<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item
        android:id="@+id/settings"
        android:title="@string/settings_label"
        android:alphabeticShortcut="@string/settings_shortcut" />
    <item
        android:id="@+id/help"
        android:title="@string/help_label"
        android:icon="@drawable/question"
        android:alphabeticShortcut="@string/help_shortcut" />
    <item
        android:id="@+id/exit"
        android:icon="@drawable/exit"
        android:title="@string/exit" />
</menu>
